--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -13,44 +13,75 @@ html, body, canvas{
 <canvas id="canvas" style="border:1px solid #000000;">
 Your browser does not support the HTML5 canvas tag.
 </canvas>
-<button id="start">Start</button>
-<button id="stop">Stop</button>
 
 <script type="text/javascript" src="js/stats.js"></script>
 <script type="text/javascript" src="js/prototypes.js"></script>
 <script type="text/javascript" src="js/colors.js"></script>
 <script type="text/javascript" src="js/engine.js"></script>
+<script type="text/javascript" src="js/inputListener.js"></script>
 <script type="text/javascript" src="js/world.js"></script>
-<script type="text/javascript" src="js/item.js"></script>
+<script type="text/javascript" src="js/items.js"></script>
 <script type="text/javascript" src="js/ball.js"></script>
 <script type="text/javascript" src="js/bar.js"></script>
 
 <script type="text/javascript">
 (function(g, undefined){
 
+  var inputListener = new g.InputListener();
 	var world = new g.World(800,600);
+	var engine = new g.Engine(world, inputListener);
 	//var i = g.utils.getRandomInt(0,1023);
-	/*
-	for(var i=0;i<512;i++){
+	var start = 0;
+	var end = 512;
+	var bar = new g.items.Bar(start, end, 5, 775);
+	bar.setColor('red');
+	bar.setPos(10,10);
+	world.addItem(bar);
+	engine.render();
+	var i = start;
+	function addBall(){
 		var size = g.utils.getRandomInt(5,30);
-		var startX = g.utils.getRandomInt(0,800 - 2*size);
-		var startY = g.utils.getRandomInt(0,600 - 2*size);
+		var startX = g.utils.getRandomInt(10,790 - 2*size);
+		var startY = g.utils.getRandomInt(30,590 - 2*size);
 		var startVx = g.utils.getRandomInt(-5,5);
 		var startVy = g.utils.getRandomInt(-5,5);
 		var color = g.utils.findColor(i%256);
 		var ball = new g.items.Ball(size);
 		ball.setPos(startX,startY);
 		ball.setSpeed(startVx,startVy);
-		ball.setAccel(0,0.0981);
+		ball.setAccel(0,0.1);
 		ball.setColor(color['hexString']);
 		world.addItem(ball);
-	}*/
-	/*
+		bar.setValue(bar.getValue() + 1);
+		if((100 * i / end) >= 70){
+			bar.setColor('green');
+		}
+		if((100 * i / end) < 70){
+			bar.setColor(g.utils.findColor(184)['hexString']);
+		}
+		if((100 * i / end) < 30){
+			bar.setColor('red');
+		}
+		engine.render();
+		i++;
+		if(i < end){
+			window.setTimeout(addBall, 1);
+		}else{
+			console.log(world.getItems());
+			bar.setToDelete(true);
+			engine.start();
+		}
+	}
+
+	addBall();
+
+
+/*
 	var ball1 = new g.items.Ball(20);
 	ball1.setPos(100,100);
-	ball1.setSpeed(5,0);
-	ball1.setAccel(1,0);
-	var ball2 = new g.items.Ball(20);
+	ball1.setSpeed(0,0);
+	ball1.setAccel(0,0);
+	/*var ball2 = new g.items.Ball(20);
 	ball2.setPos(500,100);
 	ball2.setSpeed(0,0);
 	ball2.setAccel(1,0);*/
@@ -59,29 +90,30 @@ Your browser does not support the HTML5 canvas tag.
 	item.setPos(100,100);
 	item.setSpeed(0,0);
 	//item.setAccel(0,0.1);*/
-	/*world.addItem(ball1);
-	world.addItem(ball2);*/
-	
+/*	world.addItem(ball1);
+	/*world.addItem(ball2);*/
+/*  var color = g.utils.findColor(184)
+
 	var bar = new g.items.Bar(0, 100);
 	bar.setColor('green');
 	bar.setPos(200,200);
 	world.addItem(bar);
 	var bar2 = new g.items.Bar(0, 100);
 	bar2.setColor('blue');
-	bar2.setPos(200,205);
+	bar2.setPos(200,250);
 	world.addItem(bar2);
 	var bar3 = new g.items.Bar(0, 100);
-	bar3.setColor('yellow');
-	bar3.setPos(200,210);
+	bar3.setColor(color['hexString']);
+	bar3.setPos(200,300);
 	world.addItem(bar3);
 	var bar4 = new g.items.Bar(0, 100);
 	bar4.setColor('red');
-	bar4.setPos(200,215);
+	bar4.setPos(200,350);
 	world.addItem(bar4);
-	
+
 	console.log(world.getItems());
-	var engine = new g.Engine(world);
-	engine.render();
+*/
+
 	/*
 	var i = 0;
 	function loop(){
@@ -93,16 +125,9 @@ Your browser does not support the HTML5 canvas tag.
 		}
 		window.setTimeout(loop , 1000);
 	}
-	
+
 	window.setTimeout(loop , 1000);
 		*/
-	document.getElementById('start').onclick = function(){
-		engine.init();
-		engine.start();
-	};
-	document.getElementById('stop').onclick = function(){
-		engine.stop();
-	}
 
 })(window.gameJs);
 </script>
