--- a/WebContent/snake/snake.html
+++ b/WebContent/snake/snake.html
@@ -20,26 +20,25 @@ html, body, canvas{
 <script type="text/javascript" src="../js/items.js" ></script>
 <script type="text/javascript" src="../js/cell.js"></script>
 <script type="text/javascript" src="../js/grid.js"></script>
-<script type="text/javascript" src="js/piece.js"></script>
-<script type="text/javascript" src="js/tetris.js"></script>
+<script type="text/javascript" src="js/snake.js"></script>
 
 <script type="text/javascript">
 (function(g, undefined){
 
 	var containerId = 'container';
-	var width = 420;
+	var width = 600;
 	var height = 600;
 	var dw = 20;
 	var dh = 20;
-	var walls = 3;
 
 	g.Core.setDebug(false);
 	g.Core.setup(containerId, width, height);
 	g.Core.initListeners();
+	g.Core.config.tps = 10;
 	g.Core.start();
 
-	var tetris = new g.Tetris(width, height, dw,dh);
-	g.Core.addItem(tetris);
+	var snake = new g.Snake(width, height, dw,dh);
+	g.Core.addItem(snake);
 
 })(window.gameJs);
 </script>
