--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     </style>
 </head>
 <body>
-    <div id="container"></div>
+    <hr/>
+    <div id="buttons">
+    </div>
+    <hr/>
+    <div id="container">
+    </div>
     <script src="dist/main.js"></script>
 </body>
 </html>
